feat: adding prettier and finishing test setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
+  },
+  "env": {
+    "jest": true
   }
 }
