--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "postcss": "8.4.29",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
@@ -34,7 +35,8 @@
     "husky": "^8.0.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
-    "lint-staged": "^14.0.1"
+    "lint-staged": "^14.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
